creator_beta/tests/arch/mips/correct/syscalls/test_mips_syscall_006.s

#
# Creator (https://creatorsim.github.io/creator/)
#

.text
main:
	li $v0, 6
    syscall
