creator_beta/tests/arch/mips/error/executor/test_mips_error_executor_008.s

#
# Creator (https://creatorsim.github.io/creator/)
#

.data
	a: .space 4

.text
main:
	
	la $t0, a
    li $t1, 10
	lw $t1, 1($t0)